# kalshi-cli

./: pyproject.toml
src/kalshi_cli/: __main__.py  cli.py  models.py
src/kalshi_cli/commands/: system.py
